cmake_minimum_required(VERSION 3.17)
project(Silver)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Silver StaticRangeSum.cpp)
#add_executable(Silver BreedCounting.cpp)
#add_executable(Silver SubsequencesSummingToSevens.cpp)
#add_executable(Silver HoofPaperScissors.cpp)
#add_executable(Silver SubarraySumsII.cpp)
add_executable(Silver SubarrayDivisibility.cpp)